# RackKit

./: .gitignore  Blender_RE_Plugin_Design.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  blender_manifest.toml  pyproject.toml
SDK_v4.6.0/: version.txt
SDK_v4.6.0/Documentation/: acceptance_testing_checklist.txt
SDK_v4.6.0/Licenses/: RE SDK License Agreement.txt
docs/: findings-device-2d-structure.md  findings-m0.md  install.md  m0-acceptance-test.md
reblend/: __init__.py
reblend/model/: __init__.py  calibration.py  kinds.py  rigs.py  schema.py  state_tables.py
reblend/project/: __init__.py  link.py  lua_reader.py  lua_writer.py  merge.py  motherboard_reader.py  png_meta.py  validation.py
reblend/render/: __init__.py  bpy_io.py  compositor.py  renderer.py  stitcher.py  validators.py
reblend/ui/: __init__.py  operators.py  panels.py  props.py
spikes/: m0_knob_spike.py
tests/: conftest.py  test_calibration.py  test_compositor.py  test_device_2d.py  test_hdgui_2d.py  test_kinds.py  test_link.py  test_lua_writer.py  test_merge.py  test_motherboard.py  test_png_meta.py  test_render_validators.py  test_sandbox.py  test_schema.py  test_state_tables.py  test_stitcher.py  test_validation.py
tests/fixtures/patch_styles/: device_2D.lua
tests/fixtures/silence_detector/: motherboard_def.lua
tests/fixtures/silence_detector/GUI2D/: device_2D.lua  hdgui_2D.lua
tests/pilot/: pilot.blend
